Mi portafolio webb

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juan | website</title>
+    <title>Daviid | Web</title>
 
     <link rel="icon" href="icon.svg">
     
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo" id="logo">Portfo<span>lio.</span></a>
+        <a href="#" class="logo" id="logo">Portf<span>olio.</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navlist">
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Hello I'm,  <span>David. Software Developer Professional.</span></h1>
-            <p>Contact me 🔻</p>
+            <h1>I'm David, <span>Software Programmer Professional.</span></h1>
+            <p>Contact me ⬇️</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Web Designer &</span><br>Web Developer</h2>
+            <h2>I am<span> Web Designer &</span><br>Web Programmer</h2>
             <div class="exp-area">
   
                 <p>Software developer with 3 years of experience, passionate about web development. My professional training is based on Front-end Development with HTML5, CSS3, (SASS), JavaScript, Vue, React, APIs, Version Control (Git) In Back-end development with Node.js, Java and databases (SQL) and English (A2). Work platforms (Visual Studio and IntelliJ). My engineering training ended with (Web Design, Programming, Data Structure and Databases). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
