--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>I'm David, <span>Software Programmer Professional.</span></h1>
-            <p>Contact me ⬇️</p>
+            <h1>I'm David, <span>Web Programmer.</span></h1>
+            <p>Contact me 📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,10 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Web Designer &</span><br>Web Programmer</h2>
+            <h2>I am<span> Web Frontend</span><br>Programmer 👨🏽‍💻🛠️</h2>
             <div class="exp-area">
   
-                <p>Software developer with 3 years of experience, passionate about web development. My professional training is based on Front-end Development with HTML5, CSS3, (SASS), JavaScript, Vue, React, APIs, Version Control (Git) In Back-end development with Node.js, Java and databases (SQL) and English (A2). Work platforms (Visual Studio and IntelliJ). My engineering training ended with (Web Design, Programming, Data Structure and Databases). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
+                <p>Software developer with 3 years of experience, passionate about web development. My professional training is based on Frontend Development with HTML5, CSS3, (SASS), JavaScript, React, APIs, Version Control (Git) In Backend development with NodeJS, ExpressJS and databases (SQLite) and English (A2) . As a professional my training was based on (Data Structure, Web Design, Programming, Databases and English). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
                 <p class="technologies">
                 <span>Technologies:</span> <i class="fa-brands fa-react"></i> <i class="fa-brands fa-js"></i> <i class="fa-brands fa-node"></i> 
  
@@ -107,20 +107,20 @@
      <!-- Serices -->
      <section class="services" id="services">
         <div class="center-text" data-aos="fade-down">
-            <h2>My<span> Services</span></h2>
+            <h2>My<span> Skills</span></h2>
         </div>
 
         <div class="services-content" data-aos="zoom-in-up">
             <div class="box">
                 <div class="box-header">
                     <img src="Landing.svg" alt="">
-                    <h3 class="title_service_1">Custom Web Development</h3>
+                    <h3 class="title_service_1">Web development</h3>
                 </div>
               
                 <ul>
-                    <li>Web development using technologies such as <span>React,</span> <span>JavaScript</span> and <span>Nodejs</span> </li>
+                    <li>Web development using technologies such as <span>HTML5,</span> <span>CSS3</span> and <span>ReactJS</span> </li>
                     <li>Implementation of advanced and dynamic functionalities for robust projects.</li>
-                    <li>Ideal for creating <span>Landing Pages, Ecommerce, Personal Blogs and Custom Web Applications.</span></li>
+                    <li>Ideal for creating <span>Landing Pages, Ecommerce, Personal Blogs and Web Applications.</span></li>
                 </ul>
                 <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" class="btn_service_1">
                     Contact me <span>Already</span>
@@ -131,7 +131,7 @@
             <div class="box">
                 <div class="box-header">
                     <img src="webSite.svg" alt="">
-                    <h3 class="title_service_2">UX/UI Designer</h3>
+                    <h3 class="title_service_2">UX-UI Prototyping</h3>
                 </div>
               
                 <ul>
