Web Backend Developer

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>I'm David, <span>Web Programmer.</span></h1>
+            <h1>I'm David, <span>Web Developer.</span></h1>
             <p>Contact me 📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
-                <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+                <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
                 <a href="https://github.com/Juanrdeveloper" target="_blank"><i class="ri-github-fill"></i></a>
                 <a target="_blank" href="mailto:medrandajuan843@gmail.com">
                     <i class="fa-solid fa-envelope" aria-hidden="true"></i>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="main-btn">
-                <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" class="btn">Contact me</a>
+                <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" class="btn">Contact me</a>
                 <a href="https://github.com/Juanrdeveloper" target="_blank" class="btn btn2 fiverr_services_btn">Github</a>
                
                 
@@ -87,10 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Web Frontend</span><br>Programmer 👨🏽‍💻🛠️</h2>
+            <h2>I am<span> Web</span><br>Developer</h2>
             <div class="exp-area">
   
-                <p>Software developer with 3 years of experience, passionate about web development. My professional training is based on Frontend Development with HTML5, CSS3, (SASS), JavaScript, React, APIs, Version Control (Git) In Backend development with NodeJS, ExpressJS and databases (SQLite) and English (A2) . As a professional my training was based on (Data Structure, Web Design, Programming, Databases and English). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
+                <p>Web Full Stack developer with 2 years of experience, passionate about web development. My professional training is based on Frontend Development with HTML5, CSS3, (SASS), JavaScript, React, APIs, Version Control (Git) In Backend development with NodeJS, ExpressJS and databases (SQL) and English (A2) . As a professional my training was based on (Data Structure, Web Design, Programming, Databases and English). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
                 <p class="technologies">
                 <span>Technologies:</span> <i class="fa-brands fa-react"></i> <i class="fa-brands fa-js"></i> <i class="fa-brands fa-node"></i> 
  
