Software Engineer Front & Back

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>I'm David, <span>Web Developer.</span></h1>
-            <p>Contact me 📥</p>
+            <h1>I'm David, <span>Software Engineer professional.</span></h1>
+            <p> Professional in software programming, with extensive experience and dedication to the technological world using Back & Front📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,10 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Web</span><br>Developer</h2>
+            <h2>I am<span> Front & Back</span><br>Software Engineer</h2>
             <div class="exp-area">
   
-                <p>Web Full Stack developer with 2 years of experience, passionate about web development. My professional training is based on Frontend Development with HTML5, CSS3, (SASS), JavaScript, React, APIs, Version Control (Git) In Backend development with NodeJS, ExpressJS and databases (SQL) and English (A2) . As a professional my training was based on (Data Structure, Web Design, Programming, Databases and English). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
+                <p>Professional in software programming with 2 years of experience, passionate about web development. My professional training is based on Frontend development with HTML5, CSS3, (SASS), JavaScript, React, APIs, Version control (Git) In Backend development with Java (Spring Boot) and databases (SQL) and English (A2) . As a professional my training was based on (Data Structure, Web Design, Programming, Databases, Web services, English A2). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
                 <p class="technologies">
                 <span>Technologies:</span> <i class="fa-brands fa-react"></i> <i class="fa-brands fa-js"></i> <i class="fa-brands fa-node"></i> 
  
@@ -122,7 +122,7 @@
                     <li>Implementation of advanced and dynamic functionalities for robust projects.</li>
                     <li>Ideal for creating <span>Landing Pages, Ecommerce, Personal Blogs and Web Applications.</span></li>
                 </ul>
-                <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" class="btn_service_1">
+                <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" class="btn_service_1">
                     Contact me <span>Already</span>
                     <i class="ri-arrow-right-line"></i>
                 </a>
@@ -139,7 +139,7 @@
                     <li>Ideal for individuals and small businesses looking for a solid and attractive online presence.</li>
                     <li>Focus on attractive and functional designs that convey each client's unique identity.</li>
                 </ul>
-                <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" class="btn_service_2">
+                <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" class="btn_service_2">
                     Contact me <span>Already</span>
                     <i class="ri-arrow-right-line"></i>
                 </a>
@@ -156,7 +156,7 @@
                     <li>Content updates and optimization for an improved user experience.</li>
                     <li>Dedicated technical support to address issues and queries effectively.</li>
                 </ul>
-                <a href="https://www.linkedin.com/in/juan-david-6297b32a1/" class="btn_service_3">
+                <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" class="btn_service_3">
                     Contact me <span>Already</span>
                     <i class="ri-arrow-right-line"></i>
                 </a>
