Cambios nuevamente en el sistema

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>I'm David, <span>Software Engineer professional.</span></h1>
-            <p> Professional in software programming, with extensive experience and dedication to the technological world using Back & Front📥</p>
+            <h1>Professional software<span> Development Technician .</span></h1>
+            <p> My professional training is based on skills such as (Data structure - Web design II - Version control - NodeJs - Express - Java - HTML5 - CSS3 - Bootstrap - Databases - Web services - JavaScript). Dev applications (IntelliJ IDEA - Netbeans - Visual Studio)📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,14 +87,13 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Front & Back</span><br>Software Engineer</h2>
+            <h2>I am<span> Juan David</span><br>Software Developer</h2>
             <div class="exp-area">
   
-                <p>Professional in software programming with 2 years of experience, passionate about web development. My professional training is based on Frontend development with HTML5, CSS3, (SASS), JavaScript, React, APIs, Version control (Git) In Backend development with Java (Spring Boot) and databases (SQL) and English (A2) . As a professional my training was based on (Data Structure, Web Design, Programming, Databases, Web services, English A2). My goal is to continue growing professionally in technology, which allows me to develop skills, contribute to success, always want to learn and face challenges.
-                <p class="technologies">
-                <span>Technologies:</span> <i class="fa-brands fa-react"></i> <i class="fa-brands fa-js"></i> <i class="fa-brands fa-node"></i> 
- 
-               <i class='bx bxl-tailwind-css' ></i> <i class='bx bxl-figma'></i> <i class="fa-brands fa-java"></i> 
+                <p>I am a Juan David dedicated to what I do, I focus a lot on web development, I want to fulfill many goals in the workplace. My personality lies in being respectful, kind, dedicated to what I do, teamwork, responsible, punctual and disciplined.
+                    I am a student of software engineering and professional technician in software development, I have good knowledge of Frontend with JavaScript, HTML5, CSS3 and React (Layout, Regular Expressions, DOM, MVC), in Backend development with NodeJS, Express and Java.
+                    I also have advanced knowledge of version control (Git) for teamwork
+                    I am passionate about learning new technologies, looking for solutions and always being committed to what I am passionate about. 
                 </p>
 
             </div>
