--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Professional software<span> Development Technician .</span></h1>
-            <p> My professional training is based on skills such as (Data structure - Web design II - Version control - NodeJs - Express - Java - HTML5 - CSS3 - Bootstrap - Databases - Web services - JavaScript). Dev applications (IntelliJ IDEA - Netbeans - Visual Studio)📥</p>
+            <h1>Web developer<span> professional.</span></h1>
+            <p>I focus on creating engaging and user-friendly websites. I am passionate about translating design concepts into interactive digital experiences and continually improving my skills to stay upt to date with the latest industry trends.  📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,13 +87,13 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Juan David</span><br>Software Developer</h2>
+            <h2>I am<span> Juan David</span><br> Web Developer</h2>
             <div class="exp-area">
   
-                <p>I am a Juan David dedicated to what I do, I focus a lot on web development, I want to fulfill many goals in the workplace. My personality lies in being respectful, kind, dedicated to what I do, teamwork, responsible, punctual and disciplined.
-                    I am a student of software engineering and professional technician in software development, I have good knowledge of Frontend with JavaScript, HTML5, CSS3 and React (Layout, Regular Expressions, DOM, MVC), in Backend development with NodeJS, Express and Java.
-                    I also have advanced knowledge of version control (Git) for teamwork
-                    I am passionate about learning new technologies, looking for solutions and always being committed to what I am passionate about. 
+                <p>I am a Juan David dedicated to what I do, I focus a lot on web development. I want to achieve many goals in the workplace. My personality lies in being respectful, kind, dedicated to what I do, teamwork, responsible, punctual and disciplined.
+                    I am a software engineering student and a professional technician in software development and English (A2). I have good knowledge of Frontend with JavaScript, HTML5, CSS3, (SASS) and React (Layout, Regular Expressions, DOM, MVC, Tailwind, Bootstrap), in Backend development with Node.js, Express and databases (PostgreSQL).
+                    I also have advanced knowledge of version control (Git & Github) for teamwork.
+                    I am passionate about learning new technologies, finding solutions and always being committed to what I am passionate about.
                 </p>
 
             </div>
