Cambios y mas cambios

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo" id="logo">Portf<span>olio.</span></a>
+        <a href="#" class="logo" id="logo">Porf<span>olio.</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navlist">
@@ -58,7 +58,7 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Web developer<span> professional.</span></h1>
+            <h1>Web Developer<span> Professional.</span></h1>
             <p>I focus on creating engaging and user-friendly websites. I am passionate about translating design concepts into interactive digital experiences and continually improving my skills to stay upt to date with the latest industry trends.  📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -87,11 +87,11 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Juan David</span><br> Web Developer</h2>
+            <h2>I am<span> Web Design</span><br> & Web Developer</h2>
             <div class="exp-area">
   
-                <p>I am a Juan David dedicated to what I do, I focus a lot on web development. I want to achieve many goals in the workplace. My personality lies in being respectful, kind, dedicated to what I do, teamwork, responsible, punctual and disciplined.
-                    I am a software engineering student and a professional technician in software development and English (A2). I have good knowledge of Frontend with JavaScript, HTML5, CSS3, (SASS) and React (Layout, Regular Expressions, DOM, MVC, Tailwind, Bootstrap), in Backend development with Node.js, Express and databases (PostgreSQL).
+                <p>I am a Juan David Rengifo dedicated to what I do, I focus a lot on web development. I want to achieve many goals in the workplace. My personality lies in being respectful, kind, dedicated to what I do, teamwork, responsible, punctual and disciplined.
+                    I am a software engineering student and a professional technician in software development and English (A2). I have good knowledge of Frontend with JavaScript, HTML5, CSS3, (SASS) and React (Layout, Regular Expressions, DOM, MVC, API Rest, Tailwind, Bootstrap), in Backend development with Node.js, Express and databases (PostgreSQL).
                     I also have advanced knowledge of version control (Git & Github) for teamwork.
                     I am passionate about learning new technologies, finding solutions and always being committed to what I am passionate about.
                 </p>
@@ -113,7 +113,7 @@
             <div class="box">
                 <div class="box-header">
                     <img src="Landing.svg" alt="">
-                    <h3 class="title_service_1">Web development</h3>
+                    <h3 class="title_service_1">Web Development</h3>
                 </div>
               
                 <ul>
