--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2>I am<span> Web Designer</span><br> & Frontend Developer</h2>
             <div class="exp-area">
   
-                <p>I have a strong background in software engineering, 2 years of programming experience. My skills are based on a wide range of technologies including Java, JavaScript, HTML5, CSS3, (SASS), ReactJs, API and Git. My experience ranges from web design, data structure, programming, databases, web services and English (A2). (MVC, DOM, ExReg y POO), I am passionate about frontend development and can work with estimates of future tasks and client feedback. I am a highly motivated, result-oriented, self-motivated, hardworking, fast learner who constantly seeks to improve my skills and am fully aware of the latest frontend development tools.
+                <p>I have a strong background in software engineering, 2 years of programming experience. My skills are based on a wide range of technologies including (JavaScript, HTML5, CSS3, SASS, ReactJs, Tailwind, NodeJs, API and Git). My experience ranges from web design, data structure (Java), programming (Java), databases (PostgreSQL), web services and English (A2). I am passionate about frontend development and can work with estimates of future tasks and client feedback. I am a highly motivated, result-oriented, self-motivated, hardworking, fast learner who constantly seeks to improve my skills and am fully aware of the latest frontend development tools.
      
                 </p>
 
