--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo" id="logo">Hi<span> Welcome.</span></a>
+        <a href="#" class="logo" id="logo">Hi,<span> Welcome.</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navlist">
@@ -58,7 +58,7 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Frontend Web<span> Developer.</span></h1>
+            <h1>Professional<span> programming.</span></h1>
             <p>I focus on creating beautiful and easy-to-use web applications. I am passionate about translating design concepts into interactive digital experiences and continuously improving my skills to stay up to date with the latest industry trends. 📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -90,7 +90,7 @@
             <h2>I am<span> Web Designer</span><br> & Frontend Developer</h2>
             <div class="exp-area">
   
-                <p>I have a strong background in software engineering, 2 years of programming experience. My skills are based on a wide range of technologies including (JavaScript, HTML5, CSS3, SASS, ReactJs, Tailwind, NodeJs, API and Git). My experience ranges from web design, data structure (Java), programming (Java), databases (PostgreSQL), web services and English (A2). I am passionate about frontend development and can work with estimates of future tasks and client feedback. I am a highly motivated, result-oriented, self-motivated, hardworking, fast learner who constantly seeks to improve my skills and am fully aware of the latest frontend development tools.
+                <p>I have a strong background in software engineering, with 3 years of programming experience. My skills are based on a wide range of technologies including. JavaScript, TypeScript, HTML5, CSS3, SASS, React, Tailwind, Node.js, API and Git. My experience ranges from web design, data structure, programming, databases, web services and English (A2). I am passionate about frontend development and can work with estimates of future tasks and feedback from clients. I am a highly motivated, result-oriented, self-motivated, hard-working, fast learner who is constantly looking to improve his skills. I am fully aware of the latest frontend development tools.
      
                 </p>
 
