--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Professional<span> programmer.</span></h1>
+            <h1>Web Frontend <span> Developer</span></h1>
             <p>I focus on creating beautiful and easy-to-use web applications. I am passionate about translating design concepts into interactive digital experiences and continuously improving my skills to stay up to date with the latest industry trends. 📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -87,10 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Web Designer</span><br> & Web Developer</h2>
+            <h2>I am<span> Juan Rengifo</span><br> Frontend Developer</h2>
             <div class="exp-area">
   
-                <p>I have a solid background as a software programming technician, with 3 years of experience. My skills are based on a wide range of technologies including: Java, JavaScript, HTML5, CSS3, SASS, React, Tailwind, Node.js, API and Git. My experience ranges from web design, data structure, programming, databases, web services and English (A2). I am passionate about frontend development and can work with estimates of future tasks and feedback from clients. I am a highly motivated, results-oriented, self-motivated, hard-working, fast learner who is constantly looking to improve his skills.
+                <p>I have a solid background as a software programming technician, with 3 years of experience. My skills are based on a wide range of technologies including JavaScript, HTML5, CSS3, SASS, VueJs, Tailwind, NodeJS and Git. My experience ranges from web design, data structure, programming, databases, web services and English (A2). I am passionate about frontend development and can work with estimates of future tasks and feedback from clients. I am a highly motivated, results-oriented, self-motivated, hard-working, fast learner who is constantly looking to improve his skills.
      
                 </p>
 
