--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Web Frontend <span> Developer</span></h1>
-            <p>I focus on creating beautiful and easy-to-use web applications. I am passionate about translating design concepts into interactive digital experiences and continuously improving my skills to stay up to date with the latest industry trends. 📥</p>
+            <h1>Web Full Stack<span> Developer</span></h1>
+            <p>I focus on creating beautiful and easy to use web applications. I am passionate about translating design concepts into interactive digital experiences and continuously improving my skills to stay up to date with the latest industry trends. 📥</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,11 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Juan Rengifo</span><br> Frontend Developer</h2>
+            <h2>I am<span> Juan Rengifo</span><br>Web Developer</h2>
             <div class="exp-area">
   
-                <p>I have a solid background as a software programming technician, with 3 years of experience. My skills are based on a wide range of technologies including JavaScript, HTML5, CSS3, SASS, VueJs, Tailwind, NodeJS and Git. My experience ranges from web design, data structure, programming, databases, web services and English (A2). I am passionate about frontend development and can work with estimates of future tasks and feedback from clients. I am a highly motivated, results-oriented, self-motivated, hard-working, fast learner who is constantly looking to improve his skills.
-     
+                <p>Software engineer with over 2 years of experience, deeply passionate about technology. My expertise is frontend programming using HTML5, CSS3 (SASS), JavaScript, TypeScript and Java, along with mastery of frameworks such as React and Vue.js. I have a solid background in backend programming, using Nodejs and Express to create secure, efficient and robust web applications.
                 </p>
 
             </div>
