--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo" id="logo">Hi,<span> Welcome.</span></a>
+        <a href="#" class="logo" id="logo">Hi,<span> Welcome</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navlist">
@@ -59,7 +59,7 @@
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
             <h1>Web Full Stack<span> Developer</span></h1>
-            <p>I focus on creating beautiful and easy to use web applications. I am passionate about translating design concepts into interactive digital experiences and continuously improving my skills to stay up to date with the latest industry trends. 📥</p>
+            <p>My name is Juan David Rengifo, I am a Software Engineer from the Universidad Superior CIAF, Pereira, Colombia. I consider myself a person passionate about Front-End web development. I love creating web experience</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -90,7 +90,8 @@
             <h2>I am<span> Juan Rengifo</span><br>Web Developer</h2>
             <div class="exp-area">
   
-                <p>Software engineer with over 2 years of experience, deeply passionate about technology. My expertise is frontend programming using HTML5, CSS3 (SASS), JavaScript, TypeScript and Java, along with mastery of frameworks such as React and Vue.js. I have a solid background in backend programming, using Nodejs and Express to create secure, efficient and robust web applications.
+                <p>Software engineer with over 2 years of experience, deeply passionate about technology. My expertise is frontend programming using HTML5, CSS3 (SASS), JavaScript, and TypeScript, along with mastery of frameworks such as React. I have a solid background in backend programming, employing Nodejs, Express, and Java to build secure, efficient, and robust web applications.
+                    Additionally, I have contributed to learning mobile applications using React Native. Throughout my career, I have learned data structures, logic programming, programming, web design, databases, web services, and English, contributing significantly to my personal and professional growth.
                 </p>
 
             </div>
