--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Web Full Stack<span> Developer</span></h1>
-            <p>My name is Juan David Rengifo, I am a Software Engineer from the Universidad Superior CIAF, Pereira, Colombia. I consider myself a person passionate about Front-End web development. I love creating web experience</p>
+            <h1>Web Frontend<span> Developer</span></h1>
+            <p>I am a software developer from the Universidad Superior CIAF, Pereira, Colombia. I consider myself a person passionate about Frontend web development. I love creating web experiences.</p>
             <div class="social">
                 <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,11 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Juan Rengifo</span><br>Web Developer</h2>
+            <h2>I am<span> Juan Rengifo</span><br>Frontend Developer</h2>
             <div class="exp-area">
   
-                <p>Software engineer with over 2 years of experience, deeply passionate about technology. My expertise is frontend programming using Figma, HTML5, CSS3 (SASS), JavaScript, and TypeScript, along with mastery of frameworks such as React. I have a solid background in backend programming, employing Node.js and Express to build secure, efficient, and robust web applications.
-                    Additionally, I have contributed to learning mobile applications using React Native. Throughout my career, I have learned data structures, logic programming, programming, web design, databases, web services, and English, contributing significantly to my personal and professional growth.
+                <p>Software developer with 3+ years of experience, deeply passionate about technology. My expertise is frontend programming using HTML5, CSS3 (SASS), JavaScript, and TypeScript, along with mastery of frameworks such as React. I have a solid background in backend programming, employing Node.js and Express to build secure, efficient, and robust web applications. Throughout my career, I have learned data structures, logic programming, programming, web design, databases, web services, and English, contributing significantly to my personal and professional growth.
                 </p>
 
             </div>
