Nuevos cambios en la web del Inge

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2>I am<span> Juan Rengifo</span><br>Frontend Developer</h2>
             <div class="exp-area">
   
-                <p>Software developer with 3+ years of experience, deeply passionate about technology. My expertise is frontend programming using HTML5, CSS3 (SASS), JavaScript, and TypeScript, along with mastery of frameworks such as React. I have a solid background in backend programming, employing Node.js and Express to build secure, efficient, and robust web applications. Throughout my career, I have learned data structures, logic programming, programming, web design, databases, web services, and English, contributing significantly to my personal and professional growth.
+                <p>Software developer with 3+ years of experience, deeply passionate about technology. My expertise is frontend programming using HTML5, CSS3 (SASS), ES6, JavaScript, and TypeScript, along with mastery of frameworks such as React. I have a solid background in backend programming, employing Node.js and Express to build secure, efficient, and robust web applications. Throughout my career, I have learned data structures, logic programming, programming, web design, databases, web services, and English, contributing significantly to my personal and professional growth.
                 </p>
 
             </div>
