--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
             <h1>Web Frontend<span> Developer</span></h1>
-            <p>Frontend Developer | HTML5 | CSS3 | JavaScript | React | SASS | Nodejs | Bootstrap | Tailwind | Typescript | Git | Github | PostgreSQL</p>
+            <p>Frontend Developer - HTML5 - CSS3 - JavaScript - React - Vuejs - SASS - Nodejs - Typescript - Git - Github - DOM - MVC - ExReg</p>
             <div class="social">
-                <a href="https://www.instagram.com/jdr___07/" target="_blank"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.instagram.com/juanrgf__/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
                 <a href="https://github.com/Juanrdeveloper" target="_blank"><i class="ri-github-fill"></i></a>
                 <a target="_blank" href="mailto:medrandajuan843@gmail.com">
@@ -90,7 +90,7 @@
             <h2>I am<span> Juan Rengifo</span><br>Front-end Developer</h2>
             <div class="exp-area">
   
-                <p>Enthusiastic software engineer with a passion for building user-centric web applications. 2+ years of experience using technologies to deliver high-quality solutions. Specialized in front-end development with React and Tailwind, (SASS), possesses strong back-end development skills using Node.js (Express and PostgreSQL). I have knowledge in (ES6, Typescript, API, English A2) and am currently pursuing a Software Engineering degree to hone my technical skills in architecture, automated testing, data structures, DOM manipulation, OOP, Regular Expressions, Model-Controller-View, and web services.
+                <p>Enthusiastic software engineer with a passion for building user-centric web applications. 3+ years of experience using technologies to deliver high-quality solutions. Specialized in front-end development with React, Vuejs and Tailwind, (SASS), possesses strong back-end development skills using Node.js (Express). I have knowledge in (Typescript, API, English A2) 
                 </p>
 
             </div>
