Cambios en el sistema

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Web Frontend<span> Developer</span></h1>
-            <p>Frontend Developer | React | JavaScript | Java | SASS | Bootstrap</p>
+            <h1>Frontend<span> Developer</span></h1>
+            <p>Have a website and grow your business by attracting new customers, increasing your online visibility, and offering an accessible and engaging experience that drives your sales and strengthens your brand.</p>
             <div class="social">
                 <a href="https://www.instagram.com/juanrgf__/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/juan-rengifo-6297b32a1/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
@@ -87,10 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Juan Rengifo</span><br>Front-end Developer</h2>
+            <h2>I am<span> Juan Rengifo</span><br>Frontend developer</h2>
             <div class="exp-area">
   
-                <p>Enthusiastic software engineer with a passion for building user-centric web applications. 3+ years of experience using technologies to deliver high-quality solutions. Specialized in front-end development with React and Tailwind, possesses strong back-end development skills using Java. 
+                <p>I am a proactive person. I am currently studying software engineering. I consider myself a great person, respectful, responsible and organized. I have 2 years of experience and a great passion for technology. My experience is web development with HTML5, CSS3 (SASS), JavaScript, in addition to having experience in frameworks such as React and Node.js. I would love to acquire new knowledge and learn new skills to strengthen my passion for technology.
                 </p>
 
             </div>
@@ -131,7 +131,7 @@
                 </div>
               
                 <ul>
-                    <li>Essential website design and development, including <span>React Native</span></li>
+                    <li>Essential website design and development, including <span>Node.js</span></li>
                     <li>Ideal for individuals and small businesses looking for a solid and attractive online presence.</li>
                     <li>Focus on attractive and functional designs that convey each client's unique identity.</li>
                 </ul>
