--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Frontend<span> Developer</span></h1>
+            <h1>Web Full Stack<span> Developer</span></h1>
             <p>Have a website and grow your business by attracting new customers, increasing your online visibility, and offering an accessible and engaging experience that drives your sales and strengthens your brand.</p>
             <div class="social">
                 <a href="https://www.instagram.com/juanrgf__/" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -87,10 +87,10 @@
         </div>
 
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>I am<span> Juan Rengifo</span><br>Frontend developer</h2>
+            <h2>I am<span> Juan Rengifo</span><br>Web developer</h2>
             <div class="exp-area">
   
-                <p>I am a proactive person. I am currently studying software engineering. I consider myself a great person, respectful, responsible and organized. I have 2 years of experience and a great passion for technology. My experience is web development with HTML5, CSS3 (SASS), JavaScript, in addition to having experience in frameworks such as React and Node.js. I would love to acquire new knowledge and learn new skills to strengthen my passion for technology.
+                <p>I am a proactive person. I am currently studying software engineering. I consider myself a great person, respectful, responsible and organized. I have 2 years of experience and a great passion for technology. My experience is web development with HTML5, CSS3 (SASS), JavaScript, Java, PostgreSQL, Postman in addition to having experience in frameworks such as React, Node.js and Express. I would love to acquire new knowledge and learn new skills to strengthen my passion for technology.
                 </p>
 
             </div>
