--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in">
             <!-- <h4>Hi, There!</h4> -->
-            <h1>Web Full Stack<span> Developer</span></h1>
+            <h1>Web<span> Developer</span></h1>
             <p>Have a website and grow your business by attracting new customers, increasing your online visibility, and offering an accessible and engaging experience that drives your sales and strengthens your brand.</p>
             <div class="social">
                 <a href="https://www.instagram.com/juanrgf__/" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -90,7 +90,7 @@
             <h2>I am<span> Juan Rengifo</span><br>Web developer</h2>
             <div class="exp-area">
   
-                <p>I am a proactive person. I am currently studying software engineering. I consider myself a great person, respectful, responsible and organized. I have 2 years of experience and a great passion for technology. My experience is web development with HTML5, CSS3 (SASS), JavaScript, Java, PostgreSQL, Postman in addition to having experience in frameworks such as React, Node.js and Express. I would love to acquire new knowledge and learn new skills to strengthen my passion for technology.
+                <p>I am a proactive person. I am currently studying software engineering. I consider myself a great person, respectful, responsible and organized. I have 2 years of experience and a great passion for technology. My experience is web development with HTML5, CSS3, JavaScript, Python in addition to having experience in frameworks such as React. I would love to acquire new knowledge and learn new skills to strengthen my passion for technology.
                 </p>
 
             </div>
@@ -131,7 +131,7 @@
                 </div>
               
                 <ul>
-                    <li>Essential website design and development, including <span>Node.js</span></li>
+                    <li>Essential website design and development, including <span>Python</span></li>
                     <li>Ideal for individuals and small businesses looking for a solid and attractive online presence.</li>
                     <li>Focus on attractive and functional designs that convey each client's unique identity.</li>
                 </ul>
